--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">SendMe</string>
     <string name="email">E-Mail</string>
     <string name="password">Password</string>
-    <string name="login">Log in\n</string>
+    <string name="login">Log in</string>
     <string name="forgot_password">Forgot password</string>
     <string name="create_account">Create new account</string>
+    <string name="full_name">Fullname</string>
+    <string name="signup">Sign in</string>
 </resources>
