--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="create_account">Create new account</string>
     <string name="full_name">Fullname</string>
     <string name="signup">Sign in</string>
+    <string name="new_message">New message</string>
 </resources>
