--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="full_name">Fullname</string>
     <string name="signup">Sign in</string>
     <string name="new_message">New message</string>
+    <string name="to">To:</string>
 </resources>
